[GR-76918] Preserve serializable lambda associated classes